# CS_Animatronics

./: ControllerMap.json  Motor_Limits.json  README.md  ros2_start.sh
RecordedLog/: record_20250109_220625.json  record_20250112_003009.json  record_20250112_003313.json  record_20250112_003404.json  record_20250112_004501.json  record_20250112_005826.json  record_20250112_080204.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller_publisher/lib/controller_publisher/: controller_publisher
install/controller_publisher/share/controller_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dynamixel_sdk/share/ament_index/resource_index/package_run_dependencies/: dynamixel_sdk
install/dynamixel_sdk/share/ament_index/resource_index/parent_prefix_path/: dynamixel_sdk
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.dsv  package.ps1  package.sh
install/dynamixel_sdk/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig-version.cmake  dynamixel_sdkConfig.cmake
install/dynamixel_sdk_custom_interfaces/share/ament_index/resource_index/parent_prefix_path/: dynamixel_sdk_custom_interfaces
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: package.sh
install/dynamixel_sdk_examples/share/ament_index/resource_index/parent_prefix_path/: dynamixel_sdk_examples
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.bash  package.sh  package.zsh
install/launch/share/ament_index/resource_index/package_run_dependencies/: launch
install/launch/share/ament_index/resource_index/parent_prefix_path/: launch
install/launch/share/launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/launch/share/launch/cmake/: launchConfig-version.cmake  launchConfig.cmake
install/launch/share/launch/environment/: ament_prefix_path.dsv  path.dsv
install/motor_command_msg/include/motor_command_msg/motor_command_msg/msg/: id_angle.hpp  rosidl_generator_cpp__visibility_control.hpp
install/motor_command_msg/share/motor_command_msg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_command_msg/share/motor_command_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  export_motor_command_msg__rosidl_generator_pyExport.cmake  export_motor_command_msg__rosidl_typesupport_fastrtps_cExport.cmake  export_motor_command_msg__rosidl_typesupport_fastrtps_cppExport.cmake  motor_command_msg__rosidl_typesupport_cExport-noconfig.cmake  motor_command_msg__rosidl_typesupport_cExport.cmake  motor_command_msg__rosidl_typesupport_cppExport-noconfig.cmake  motor_command_msg__rosidl_typesupport_cppExport.cmake  motor_command_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  motor_command_msg__rosidl_typesupport_introspection_cExport.cmake  motor_command_msg__rosidl_typesupport_introspection_cppExport.cmake
install/motor_command_msg/share/motor_command_msg/msg/: IdAngle.idl
install/motor_controller/lib/motor_controller/: system_controller
install/motor_controller/share/motor_controller/: package.sh  package.xml
install/system_controller/lib/system_controller/: controller_publisher  system_controller
install/system_controller/share/system_controller/: package.dsv  package.sh  package.xml
log/: latest_build
motor_controller/: package.xml  setup.py
src/DeepLabCut/: DeepLabCutAnalysis.py
src/DeepLabCut/Animatronics-Ryo-2024-12-17/: config.yaml
src/DeepLabCut/Animatronics-Ryo-2024-12-17/evaluation-results-pytorch/iteration-0/: CombinedEvaluation-results.csv
src/DeepLabCut/Animatronics-Ryo-2024-12-17/evaluation-results-pytorch/iteration-0/AnimatronicsDec17-trainset95shuffle1/: DLC_Resnet50_AnimatronicsDec17shuffle1_snapshot_010.h5
src/DeepLabCut/Animatronics-Ryo-2024-12-17/labeled-data/Raptor1/: CollectedData_Ryo.h5
src/DeepLabCut/Animatronics-Ryo-2024-12-17/videos/: Raptor1DLC_Resnet50_AnimatronicsDec17shuffle1_snapshot_010.h5  Raptor1DLC_Resnet50_AnimatronicsDec17shuffle1_snapshot_010_full.pickle  Raptor1DLC_Resnet50_AnimatronicsDec17shuffle1_snapshot_010_meta.pickle
src/DeepLabCut/Videos/: RaptorCroped.mov
src/DeepLabCut/animatronics-ryo-2024-12-18/: config.yaml
src/DeepLabCut/animatronics-ryo-2024-12-18/evaluation-results-pytorch/iteration-0/: CombinedEvaluation-results.csv
src/DeepLabCut/animatronics-ryo-2024-12-18/labeled-data/4B0CCEC3-B219-4C7F-A07C-F0ACDF82976E Copy/: CollectedData_ryo.h5  machinelabels-iter0.h5  machinelabels.csv
src/DeepLabCut/animatronics-ryo-2024-12-18/labeled-data/Raptor1/: machinelabels-iter0.h5  machinelabels.csv
src/DeepLabCut/animatronics-ryo-2024-12-18/videos/: 4B0CCEC3-B219-4C7F-A07C-F0ACDF82976E Copy.mov  Raptor1.mov
src/controller_publisher/: package.xml  setup.py
src/controller_publisher/controller_publisher/: controller_publisher.py
src/dynamixel_sdk/: CMakeLists.txt
src/dynamixel_sdk_examples/: CMakeLists.txt
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/controller_publisher/share/controller_publisher/: package.sh
src/install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
src/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: package.sh
src/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: package.sh
src/install/motor_command_msg/share/motor_command_msg/: local_setup.sh  package.sh
src/install/motor_controller/share/motor_controller/: package.sh
src/install/system_controller/share/system_controller/: package.ps1  package.sh
src/launch/launch/: launch.xml
src/log/: latest_build
src/motor_command_msg/: CMakeLists.txt
src/motor_command_msg/msg/: IdAngle.msg
src/motor_controller/: package.xml  setup.py
src/motor_controller/motor_controller/: motor_controller.py
src/system_controller/: CMakeLists.txt  package.xml  setup.py
src/system_controller/msg/: IdAngle.msg
src/system_controller/system_controller/: .system_controller.py.swp  system_controller.py
(+35 files in other folders)
