<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_publisher</name>
  <version>0.0.0</version>
  <description>a package for controller</description>
  <maintainer email="2023m002@kuas.ac.jp">Ryo Isogawa</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>pygame</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
